--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     Hi! This is Rajitha
     I studied in SASTRA and i'm currently working in Infosys
+
+    my fav book is twinkle
 </body>
 </html>
